fix: 🚧z-index menu

--- a/app/[locale]/components/Interest/ThirdSlide.module.scss
+++ b/app/[locale]/components/Interest/ThirdSlide.module.scss
@@ -10,7 +10,7 @@
   justify-content: center;
   width: 100%;
   gap: 30px;
-  z-index: 9999;
+  z-index: 10;
   overflow: hidden;
   h1 {
     color: variables.$secondary;
