--- a/app/shared/navbar/components/navigationMenu/NavigationMenu.module.scss
+++ b/app/shared/navbar/components/navigationMenu/NavigationMenu.module.scss
@@ -14,7 +14,7 @@
       border: none;
       cursor: pointer;
       border-radius: 8px;
-      z-index: 9;
+      z-index: 999;
     } 
     
     ul {
